--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -15,7 +15,7 @@ layout:
 apps:
   kiwix-desktop:
     #build-attributes: [keep-execstack]
-    command: desktop-launch $SNAP/bin/snapcraft-preload $SNAP/usr/local/bin/kiwix-desktop
+    command: desktop-launch $SNAP/usr/local/bin/kiwix-desktop
     environment:
       DEBUG: 1
       LD_LIBRARY_PATH: "$SNAP/usr/local/lib/$SNAPCRAFT_ARCH_TRIPLET:$SNAP/usr/lib/$SNAPCRAFT_ARCH_TRIPLET/pulseaudio:$LD_LIBRARY_PATH"
@@ -43,7 +43,6 @@ parts:
       - libqt5svg5-dev
       - qttools5-dev-tools
     stage-packages:
-      - libgtk2.0-0
       - qt5-image-formats-plugins
       - libqt5gui5
       - qt5-default
@@ -223,6 +222,7 @@ parts:
     source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
     source-subdir: qt
     stage-packages:
+      - libgtk2.0-0
       - libxkbcommon0
       - ttf-ubuntu-font-family
       - dmz-cursor-theme
