'try' libcrystalhd3 package

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -55,7 +55,8 @@ parts:
       - libcairo2
       - libchromaprint1
       - libcroco3
-      - libcrystalhd3
+      - try:
+        - libcrystalhd3
       - libdatrie1
       - libdouble-conversion1
       - libdrm2
